WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23582
Inline with opacity and transform asserts
https://bugs.webkit.org/show_bug.cgi?id=23582
Summary
Inline with opacity and transform asserts
Simon Fraser (smfr)
Reported
2009-01-27 21:38:46 PST
If an inline element has both a transform, and something that causes it to get a RenderLayer (like opacity), then we hit assertions via RenderLayer because we're trying to compute a borderBoxRect() on an inline while updating the transform.
Attachments
Patch, changelog, testcases
(11.80 KB, patch)
2009-01-27 22:14 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Updated patch, removing isReplica()
(11.53 KB, patch)
2009-01-28 11:11 PST
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-01-27 22:14:26 PST
Created
attachment 27094
[details]
Patch, changelog, testcases
Simon Fraser (smfr)
Comment 2
2009-01-28 11:11:19 PST
Created
attachment 27111
[details]
Updated patch, removing isReplica()
Dave Hyatt
Comment 3
2009-01-28 11:31:20 PST
Comment on
attachment 27111
[details]
Updated patch, removing isReplica() r=me
Simon Fraser (smfr)
Comment 4
2009-01-28 11:41:25 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M LayoutTests/ChangeLog A LayoutTests/fast/transforms/transform-on-inline.html A LayoutTests/fast/transforms/transform-table-row.html A LayoutTests/platform/mac/fast/transforms/transform-on-inline-expected.checksum A LayoutTests/platform/mac/fast/transforms/transform-on-inline-expected.png A LayoutTests/platform/mac/fast/transforms/transform-on-inline-expected.txt A LayoutTests/platform/mac/fast/transforms/transform-table-row-expected.checksum A LayoutTests/platform/mac/fast/transforms/transform-table-row-expected.png A LayoutTests/platform/mac/fast/transforms/transform-table-row-expected.txt M WebCore/ChangeLog M WebCore/rendering/RenderBox.cpp M WebCore/rendering/RenderReplica.cpp M WebCore/rendering/RenderTableRow.h Committed
r40318
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug