WebCore/rendering/RenderBox.cpp
@@ -40,7 +40,6 @@
 #include "RenderFlexibleBox.h"
 #include "RenderInline.h"
 #include "RenderLayer.h"
-#include "RenderReplica.h"
 #include "RenderTableCell.h"
 #include "RenderTheme.h"
 #include "RenderView.h"
@@ -228,7 +227,9 @@ void RenderBox::styleDidChange(RenderStyle::Diff diff, const RenderStyle* oldSty
         }
     }
 
-    setHasTransform(style()->hasTransform());
+    // FIXME: we should make transforms really work on inline flows eventually.
+    if (!isInline() || isReplaced())
+        setHasTransform(style()->hasTransform());
     setHasReflection(style()->boxReflect());
 
     if (requiresLayer()) {
