WebCore/rendering/RenderReplica.cpp
@@ -35,7 +35,13 @@ namespace WebCore {
 
 RenderReplica::RenderReplica(Node* n)
 : RenderBox(n)
-{}
+{
+    // This is a hack. Replicas are synthetic, and don't pick up the attributes of the
+    // renderers being replicated, so they always report that they are inline, non-replaced.
+    // However, we need transforms to be applied to replicas for reflections, so have to pass
+    // the if (!isInline() || isReplaced()) check before setHasTransform().
+    setReplaced(true);
+}
 
 RenderReplica::~RenderReplica()
 {}
